08b-plex.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: plex
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: plex
  labels:
    app: plexserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plexserver
  template:
    metadata:
      labels:
        app: plexserver
    spec:
      volumes:
      - name: plex-config
        persistentVolumeClaim:
          claimName: pvc-plex-config
      - name: plex-data
        persistentVolumeClaim:
          claimName: pvc-plex-data
      containers:
      - name: plex
        image: plexinc/pms-docker
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 1
            memory: 512Mi
        ports:
        - containerPort: 32400 #PMS
          name: plex
        - containerPort: 32400
          name: plex-udp
          protocol: UDP
        - containerPort: 32469 #Plex DLNA
          name: plex-dlna
        - containerPort: 5353
          name: plex-discovery
          protocol: UDP
        - containerPort: 1900 #Plex DLNA
          name: plex-dlna-udp
          protocol: UDP
        volumeMounts:
        - mountPath: /config
          name: plex-config
        - mountPath: /data
          name: plex-data
