08d-plex-ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  labels:
    app: plexserver
  name: plex-httpproxy
  namespace: plex
spec:
  routes:
  - conditions:
    - prefix: /
    pathRewritePolicy:
      replacePrefix:
      - prefix: /
        replacement: /
    services:
    - name: plex-tcp #corresponds to service object
      port: 32400
  virtualhost:
    fqdn: plex.tce.rhmlab.local
    tls:
      secretName: plex-tls
